Fixes to intro video with autoplay on mobile screens

--- a/3x3planet/parallax/css/screen.css
+++ b/3x3planet/parallax/css/screen.css
@@ -399,6 +399,10 @@ header #title {
 	z-index: 3;
 }
 
+header.title__hidden #title {
+	display: none;
+}
+
 header #title img {
 	display: block;
 	height: 4.8rem;
