--- a/3x3planet/parallax/css/screen_breakpoints.css
+++ b/3x3planet/parallax/css/screen_breakpoints.css
@@ -42,8 +42,12 @@
 		display: none;
 	}
 
-	.no-videoautoplay #intro.overlay #intro__video {
-		display: none;
+	.no-videoautoplay .title__hidden #title {
+		display: block;
+	}
+
+	.no-videoautoplay #intro__video {
+		display: none !important;
 	}
 
 	.no-videoautoplay #intro__fallback {
